# fitconvert

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.cpp  conanfile.txt  datasource.cpp  datasource.h  init.bat  main.cpp  parser.cpp  parser.h  tests.cpp
